--- a/AMS/Diagonalpermutohedra.tex
+++ b/AMS/Diagonalpermutohedra.tex
@@ -322,14 +322,14 @@ VP was partially supported by the French ANR grant CHARMS (ANR-19-CE40-0017) and
 
 
 %    \date is required; it is the date received by the editor.
-\date{}
+\date{\today}
 
-\subjclass[2020]{Primary }
+\subjclass[2020]{05A15; 05C05; 18M70; 52B11; 52C35}
 %    Recognition of the 2010 edition of the Mathematics Subject
 %    Classification requires a version of amsbook.cls from July 2009
 %    or later.  If "2010" is not recognized, please upgrade.
 
-\keywords{}
+\keywords{Diagonal, permutahedron, hyperplane arrangement}
 
 %\dedicatory{Dedication text (use \\[2pt] for line break if necessary)}
 
@@ -359,8 +359,8 @@ In the third part of the paper, we use the preceding results to show that there 
 
 
 %    Include unnumbered chapters (preface, acknowledgments, etc.) here.
-\include{intro}
 \include{acknowledgements}
+\include{intro}
 
 \mainmatter
 %    Include main chapters here.
